Java 16 (#428)
* Java 16 update

* Updated maven versions

* Java 11

* Java 16 build